# GPGPU-1D-Convolution

./: .gitignore  CMakeLists.txt  README.md  hillow1DConv.cu  main.cpp  main.cu
conv1DLibrary/: CMakeLists.txt  conv1DKernel.cu  conv1DKernel.cuh
src/: CMakeLists.txt  conv1DKernel.cu  conv1DKernel.cuh  conv1DKernel.h  conv1DKernelHeaders.cuh
